docs/envoy/v1.22.6/_sources/api-v3/extensions/bootstrap/internal_listener/v3/internal_listener.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/bootstrap/internal_listener/v3/internal_listener.proto:

Internal Listener
=================




.. _extension_envoy.bootstrap.internal_listener:

This extension may be referenced by the qualified name ``envoy.bootstrap.internal_listener``

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension has an unknown security posture and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.bootstrap <extension_category_envoy.bootstrap>`

.. warning::
   This API feature is currently work-in-progress. API features marked as work-in-progress are not considered stable, are not covered by the :ref:`threat model <arch_overview_threat_model>`, are not supported by the security team, and are subject to breaking changes. Do not use this feature without understanding each of the previous points.

Internal Listener :ref:`overview <config_internal_listener>`.

.. _envoy_v3_api_msg_extensions.bootstrap.internal_listener.v3.InternalListener:

extensions.bootstrap.internal_listener.v3.InternalListener
----------------------------------------------------------

:repo:`[extensions.bootstrap.internal_listener.v3.InternalListener proto] <api/envoy/extensions/bootstrap/internal_listener/v3/internal_listener.proto#L20>`

Configuration for internal listener.



