docs/envoy/v1.25.8/_sources/api-v3/extensions/bootstrap/internal_listener/v3/internal_listener.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/bootstrap/internal_listener/v3/internal_listener.proto:

Internal Listener (proto)
=========================

.. _extension_envoy.bootstrap.internal_listener:

This extension has the qualified name ``envoy.bootstrap.internal_listener``


.. note::
  This extension is functional but has not had substantial production burn time,
  use only with this caveat.

  This extension has an unknown security posture and should only be
  used in deployments where both the downstream and upstream are
  trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.bootstrap <extension_category_envoy.bootstrap>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.bootstrap.internal_listener.v3.InternalListener <envoy_v3_api_msg_extensions.bootstrap.internal_listener.v3.InternalListener>`



.. warning::
   This API feature is currently work-in-progress. API features marked as work-in-progress are not considered stable, are not covered by the :ref:`threat model <arch_overview_threat_model>`, are not supported by the security team, and are subject to breaking changes. Do not use this feature without understanding each of the previous points.



Internal Listener :ref:`overview <config_internal_listener>`.




.. _envoy_v3_api_msg_extensions.bootstrap.internal_listener.v3.InternalListener:

extensions.bootstrap.internal_listener.v3.InternalListener
----------------------------------------------------------


:repo:`[extensions.bootstrap.internal_listener.v3.InternalListener proto] <api/envoy/extensions/bootstrap/internal_listener/v3/internal_listener.proto#L23>`

Configuration for internal listener.



.. code-block:: json
  :force:

  {
    "buffer_size_kb": {...}
  }

.. _envoy_v3_api_field_extensions.bootstrap.internal_listener.v3.InternalListener.buffer_size_kb:


buffer_size_kb
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The internal listener client connection buffer size in KiB.
  For example, if ``buffer_size_kb`` is set to 5, then the actual buffer size is
  5 KiB = 5 * 1024 bytes.
  If the ``buffer_size_kb`` is not specified, the buffer size is set to 1024 KiB.


